--- a/index.html
+++ b/index.html
@@ -2,32 +2,55 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
 	<title>Rhiannon Kaulitzke</title>
 </head>
 <body>
-	<header>
-		<h1>Portfolio</h1>
+	<header class="container-fluid">
+		<div class ="row">
+			<div class="col-12 nopadding">
+				<h1>Portfolio</h1>
+			</div>
+		</div>
 	</header>
-<nav>
-	<a href="#aboutme">About Me</a>
-	<a href="#mywork">My Work</a>
-	<a href="#contactme">Contact Me</a>
-</nav>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-12 nopadding">
+			<nav>
+			<a href="#aboutme">About Me</a>
+			<a href="#mywork">My Work</a>
+			<a href="#myeducation">My Education</a>
+			<a href="#contactme">Contact Me</a>
+			</nav>
+		</div>
+	</div>
+</div>
+<section id="section1">
+	<h3 id="aboutme">About Me</h3>
+</section>
 
-<section id="section1"></section>
-	<h3>About Me</h3>
+<section id="section2">
+	<h3 id="mywork">My Work</h3>
+</section>
 
+<section id="section3">
+	<h3 id="myeducation">My Education</h3>
+</section>
 
-<section id="section2"></section>
-	<h3>My Work</h3>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-12 nopadding">
+			<footer>
+				<address>7766 Camille Ct<br>
+				Colordao Springs, CO 80908</address>
+			</footer>
+		</div>
+	</div>
+</div>
 
-<footer>
-	
-</footer>
-
-
-	
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>	
 </body>
 </html>
