--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<title>Rhiannon Kaulitzke</title>
 </head>
 <body>
 	<header class="container-fluid">
 		<div class ="row">
 			<div class="col-12 nopadding">
-				<h1>Portfolio</h1>
+				<h1>Rhiannon Kaulitzke</h1>
 			</div>
 		</div>
 	</header>
@@ -36,6 +37,11 @@
 
 <section id="section3">
 	<h3 id="myeducation">My Education</h3>
+	<ul>
+		<li>General Assembly</li>
+		<li>Univeristy of Colorado Colorado Springs</li>
+		<li>Oregon State University</li>
+	</ul>
 </section>
 
 <div class="container-fluid">
