updated color scheme, added some content

--- a/index.html
+++ b/index.html
@@ -27,16 +27,35 @@
 		</div>
 	</div>
 </div>
-<section id="section1">
-	<h3 id="aboutme">About Me</h3>
-</section>
-
-<section id="section2">
-	<h3 id="mywork">My Work</h3>
-</section>
-
-<section id="section3">
-	<h3 id="myeducation">My Education</h3>
+<div class="container-fluid">
+	<div class row>
+		<div class="col-6 nopadding">
+			<section id="section1">
+				<h3 id="aboutme">About Me</h3>
+				<p id="textbox">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group. </p>
+			</section>
+		</div>
+	</div>
+</div>
+<div class="container-fluid">
+	<div class row>
+		<div class="col-6 nopadding">
+			<section id="section2">
+				<h3 id="mywork">My Work</h3>
+				<a id="plink"href="https://github.com/RhiaK" target="_blank">Check out my Github</a>
+			</section>
+		</div>
+	</div>
+</div>
+<div class="container-fluid">
+	<div class row>
+		<div class="col-6 nopadding">
+			<section id="section3">
+				<h3 id="myeducation">My Education</h3>
+			</section>
+		</div>
+	</div>
+</div>
 	<ul>
 		<li>General Assembly</li>
 		<li>Univeristy of Colorado Colorado Springs</li>
