updated some html and css

--- a/index.html
+++ b/index.html
@@ -28,27 +28,29 @@
 	</div>
 </div>
 <div class="container-fluid">
-	<div class row>
-		<div class="col-6 nopadding">
-			<section id="section1">
-				<h3 id="aboutme">About Me</h3>
-				<p id="textbox">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group. </p>
-			</section>
+	<div class="row justify-content-between">
+		<div class="col-9 nopadding">
+			<h3 id="aboutme">About Me</h3>
+				<p id="aboutMeText">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group.</p>
+		</div>
+		<div class="col-3 nopadding">
+			<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rhiannon-kaulitzke-b6845b15a"><a class="LI-simple-link" href='https://www.linkedin.com/in/rhiannon-kaulitzke-b6845b15a?trk=profile-badge'>Rhiannon Kaulitzke</a>
+			</div>
 		</div>
 	</div>
 </div>
 <div class="container-fluid">
-	<div class row>
+	<div class="row">
 		<div class="col-6 nopadding">
 			<section id="section2">
 				<h3 id="mywork">My Work</h3>
-				<a id="plink"href="https://github.com/RhiaK" target="_blank">Check out my Github</a>
+				<p id="text">Click <a id="plink"href="https://github.com/RhiaK" target="_blank">here</a> to check out my Github.</p>
 			</section>
 		</div>
 	</div>
 </div>
 <div class="container-fluid">
-	<div class row>
+	<div class="row">
 		<div class="col-6 nopadding">
 			<section id="section3">
 				<h3 id="myeducation">My Education</h3>
@@ -63,17 +65,26 @@
 	</ul>
 </section>
 
-<div class="container-fluid">
+
+<footer class="container-fluid">
 	<div class="row">
 		<div class="col-12 nopadding">
-			<footer>
-				<address>7766 Camille Ct<br>
-				Colordao Springs, CO 80908</address>
-			</footer>
+			<div class="row justify-content-between align-items-center">
+				<div class="col-4 nopadding">
+					<a href="mailto:rhiannonkaulitzke@gmail.com">Email Me</a>
+				</div>
+				<div class="col-4 nopadding footContent">
+					<address>7766 Camille Ct<br>
+					Colordao Springs, CO 80908</address>
+				</div>
+				<div class="col-4 nopadding footContent">
+					<p>719-329-8921</p>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
-
+</footer>
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>	
