uptaded html and css

--- a/index.html
+++ b/index.html
@@ -34,39 +34,29 @@
 				<p id="aboutMeText">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group.</p>
 		</div>
 		<div class="col-3 nopadding">
-			<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rhiannon-kaulitzke-b6845b15a"><a class="LI-simple-link" href='https://www.linkedin.com/in/rhiannon-kaulitzke-b6845b15a?trk=profile-badge'>Rhiannon Kaulitzke</a>
+			<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rhiannon-kaulitzke-b6845b15a"><a class="LI-simple-link" href='https://www.linkedin.com/in/rhiannon-kaulitzke-b6845b15a?trk=profile-badge'>Rhiannon Kaulitzke</a>
 			</div>
 		</div>
 	</div>
-</div>
-<div class="container-fluid">
 	<div class="row">
 		<div class="col-6 nopadding">
-			<section id="section2">
-				<h3 id="mywork">My Work</h3>
-				<p id="text">Click <a id="plink"href="https://github.com/RhiaK" target="_blank">here</a> to check out my Github.</p>
-			</section>
+			<h3 id="mywork">My Work</h3>
+			<p id="text">Click <a id="plink"href="https://github.com/RhiaK" target="_blank">here</a> to check out my Github.</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-6 nopadding">
+			<h3 id="myeducation">My Education</h3>
+			<ul>
+				<li>General Assembly</li>
+				<li>Univeristy of Colorado Colorado Springs</li>
+				<li>Oregon State University</li>
+			</ul>
 		</div>
 	</div>
 </div>
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-6 nopadding">
-			<section id="section3">
-				<h3 id="myeducation">My Education</h3>
-			</section>
-		</div>
-	</div>
-</div>
-	<ul>
-		<li>General Assembly</li>
-		<li>Univeristy of Colorado Colorado Springs</li>
-		<li>Oregon State University</li>
-	</ul>
-</section>
 
-
-<footer class="container-fluid">
+<footer class="container-fluid nopadding">
 	<div class="row">
 		<div class="col-12 nopadding">
 			<div class="row justify-content-between align-items-center">
