updated info added logo

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<title>Rhiannon Kaulitzke</title>
 </head>
 <body>
-	<header class="container-fluid">
-		<div class ="row">
-			<div class="col-12 nopadding">
-				<h1>Rhiannon Kaulitzke</h1>
+	<header class="container-fluid nopadding">
+		<div class ="row justify-content-center">
+			<div class="col-1 nopadding">
+				<img class="logo" src="logo1.png">
 			</div>
 		</div>
 	</header>
@@ -27,30 +27,41 @@
 		</div>
 	</div>
 </div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-8 nopadding">
+				<h1><strong>Rhiannon Kaulitzke</h1>
+			</div>
+		<div class="col-3 nopadding">
+			<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rhiannon-kaulitzke-b6845b15a"><a class="LI-simple-link" href='https://www.linkedin.com/in/rhiannon-kaulitzke-b6845b15a?trk=profile-badge'>Rhiannon Kaulitzke</a>
+			</div>
+		</div>
+		</div>
+	</div>
 <div class="container-fluid">
 	<div class="row justify-content-between">
 		<div class="col-8 nopadding">
 			<h3 id="aboutme">About Me</h3>
 				<p id="aboutMeText">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group.</p>
 		</div>
-		<div class="col-3 nopadding">
-			<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rhiannon-kaulitzke-b6845b15a"><a class="LI-simple-link" href='https://www.linkedin.com/in/rhiannon-kaulitzke-b6845b15a?trk=profile-badge'>Rhiannon Kaulitzke</a>
-			</div>
-		</div>
 	</div>
 	<div class="row">
-		<div class="col-6 nopadding">
+		<div class="col-8 nopadding">
 			<h3 id="mywork">My Work</h3>
-			<p id="text">Click <a id="plink"href="https://github.com/RhiaK" target="_blank">here</a> to check out my Github.</p>
+			<h5 class="project-head">Project One: My Exploration Adventure</h5>
+			<p class="text">An immersive online story game geared towards middle schoolers. The game allows them to play the main character in the storyline of their choosing. It is an engaging way of encouraging students to enjoy reading.
+			<p class= "text"><a class="plink"href="myexplorationadventure.surge.sh" target="_blank">My Exploration Adventure</a></p>
+			<p class="text">Created using: HTML 5 | CSS/Bootstrap | JavaScript</p>
+			<h5>Check out my  <a class="plink" href="https://github.com/RhiaK" target="_blank">Github</a>.</h5>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-6 nopadding">
 			<h3 id="myeducation">My Education</h3>
 			<ul>
-				<li>General Assembly</li>
-				<li>Univeristy of Colorado Colorado Springs</li>
-				<li>Oregon State University</li>
+				<li><strong>General Assembly:</strong> Web Development</li>	
+				<li><strong>Univeristy of Colorado Colorado Springs:</strong> Secondary Education</li>
+				<li><strong>Oregon State University:</strong> Environmental Economics</li>
 			</ul>
 		</div>
 	</div>
@@ -60,15 +71,8 @@
 	<div class="row">
 		<div class="col-12 nopadding">
 			<div class="row justify-content-between align-items-center">
-				<div class="col-4 nopadding">
-					<a href="mailto:rhiannonkaulitzke@gmail.com">Email Me</a>
-				</div>
-				<div class="col-4 nopadding footContent">
-					<address>7766 Camille Ct<br>
-					Colordao Springs, CO 80908</address>
-				</div>
-				<div class="col-4 nopadding footContent">
-					<p>719-329-8921</p>
+				<div class="col-12 nopadding footContent">
+					<a href="mailto:rhiannonkaulitzke@gmail.com">rhiannonkaulitzke@gmail.com</a>
 				</div>
 			</div>
 		</div>
