--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
 	<title>Rhiannon Kaulitzke</title>
 </head>
 <body>
-	<header class="container-fluid nopadding">
+	<header class="container-fluid nopadding indexHead">
 		<div class ="row justify-content-center">
 			<div class="col-1 nopadding">
-				<img class="logo" src="logo1.png">
 			</div>
 		</div>
-	<a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px;" href="https://unsplash.com/@processrepeat?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Nathan Lemon"><span style="display:inline-block;padding:2px 3px;"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white;" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px;">Nathan Lemon</span></a>
+	<a id="credit" style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px;" href="https://unsplash.com/@processrepeat?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Nathan Lemon"><span style="display:inline-block;padding:2px 3px;"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white;" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px;">Nathan Lemon</span></a>
 	</header>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-12 nopadding">
 			<nav>
-			<a href="#aboutme">About Me</a>
+			<a href="about.html" target="_blank">About Me</a>
 			<a href="#mywork">My Work</a>
 			<a href="#myeducation">My Education</a>
-			<a href="#contactme">Contact Me</a>
+			<a href="contact.html" target="_blank">Contact Me</a>
 			</nav>
 		</div>
 	</div>
@@ -33,18 +32,11 @@
 			<div class="col-8 nopadding">
 				<h1><strong>Rhiannon Kaulitzke</h1>
 			</div>
-		<div class="col-3 nopadding">
-			<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rhiannon-kaulitzke-b6845b15a"><a class="LI-simple-link" href='https://www.linkedin.com/in/rhiannon-kaulitzke-b6845b15a?trk=profile-badge'>Rhiannon Kaulitzke</a>
-			</div>
-		</div>
 		</div>
 	</div>
+</div>
 <div class="container-fluid">
 	<div class="row justify-content-between">
-		<div class="col-8 nopadding">
-			<h3 id="aboutme">About Me</h3>
-				<p id="aboutMeText">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group.</p>
-		</div>
 	</div>
 	<div class="row">
 		<div class="col-8 nopadding">
@@ -57,17 +49,16 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-6 nopadding">
+		<div class="col-8 nopadding">
 			<h3 id="myeducation">My Education</h3>
 			<ul>
-				<li><strong>General Assembly:</strong> Web Development</li>	
-				<li><strong>Univeristy of Colorado Colorado Springs:</strong> Secondary Education</li>
-				<li><strong>Oregon State University:</strong> Environmental Economics</li>
+				<li><span class="bold">General Assembly:</span></br> Full Stack Web Development</li>	
+				<li><span class="bold">Univeristy of Colorado Colorado Springs:</span></br> Secondary Education (English/Language Arts)</li>
+				<li><span class="bold">Oregon State University:</span></br> Environmental Economics</li>
 			</ul>
 		</div>
 	</div>
 </div>
-
 <footer class="container-fluid nopadding">
 	<div class="row">
 		<div class="col-12 nopadding">
