updated aboutme img

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<h3 id="mywork">My Work</h3>
 			<h5 class="project-head">Project One: My Exploration Adventure</h5>
 			<p class="text">An immersive online story game geared towards middle schoolers. The game allows them to play the main character in the storyline of their choosing. It is an engaging way of encouraging students to enjoy reading.
-			<p class= "text"><a class="plink"href="myexplorationadventure.surge.sh" target="_blank">My Exploration Adventure</a></p>
+			<p class= "text"><a class="plink" href="http://myexplorationadventure.surge.sh" target="_blank">My Exploration Adventure</a></p>
 			<p class="text">Created using: HTML 5 | CSS/Bootstrap | JavaScript</p>
 			<h5>Check out my  <a class="plink" href="https://github.com/RhiaK" target="_blank">Github</a>.</h5>
 		</div>
