--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<div class="col-12 nopadding">
 			<nav>
 			<a href="about.html" target="_blank">About Me</a>
+			<a href="blog.html" target="_blank">My Blog</a>
 			<a href="#mywork">My Work</a>
 			<a href="#myeducation">My Education</a>
 			<a href="contact.html" target="_blank">Contact Me</a>
