updated blog appearance

--- a/blog.html
+++ b/blog.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Caveat:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<title>Rhiannon Kaulitzke</title>
 </head>
-	<header class="container-fluid nopadding aboutHead">
+	<header class="container-fluid nopadding blogHead">
 		<div class ="row justify-content-center">
-			<div class="col-1 nopadding">
+			<div class="col-12 nopadding">
+				<h1 class='blogHeadText'>My Blog</h1>
 			</div>
 		</div>
 	</header>
@@ -17,7 +19,6 @@
 <div class="container-fluid">
 		<div class="row">
 			<div class="col-8 nopadding">
-				<h1><strong>My Blog</h1>
 			</div>
 		</div>
 	</div>
@@ -26,11 +27,11 @@
 	<div class="row justify-content-between">
 		<div class="col-8 nopadding">
 			<h3 id="aboutme">Joining a Web Development Immersive Program</h3>
-				<p class="aboutMeText">That's right, immersive program, not a bootcamp anymore as they were commonly called in previous years. It seems that bootcamps in general have received some bad press by those trying to get in on the trend, but lacking the dedication to properly educated their students. This has left some with a bad taste in their mouths in regards to bootcamp graduates. I guess you could say that any immersive programs still around and thriving must be the foundational ones to not have gone the way of the "bootcamps".</p>
+			<h6>April 19, 2018</h6>
+				<p class="aboutMeText">That's right, immersive program, not a bootcamp anymore as they were commonly called in previous years. It seems that bootcamps in general have received some bad press by those trying to get in on the trend, but lacking the dedication to properly educated their students. This has left some with a bad taste in their mouths in regards to bootcamp graduates. I guess you could say that any immersive programs still around and thriving must be the foundational ones to not have gone the way of the "bootcamps."</p>
 				<p class="aboutMeText">I chose to attend General Assembly's immersive web development program after years of considering programming as a possible carrer choice. I was unsure if I would end up being an outnumbered minority, as a woman in tech, so I was a bit hesitant. I have found, that while I am a minority, it is not as big an issue as it might have been in years past.</p>
-				<p class="aboutMeText">I have now been in the program for five and a half weeks and find that I love it. I have always really enjoyed making things, of any sort really, and this really satisfies that desire. I am learning so much, every day that it can be tiring at times, but it is still so interesting and very much worth it. I am very happy to have finally found my home, a career path where I can be in a field that I love, doing work that doesn't even feel like work.</p>
-				<p class="aboutMeText">I have been working nearly non-stop for the last few weeks and never get bored. I sometimes feel a little overwhelmed, but there are so many others in my class to help when I get stuck and we have been provided innumerable resources. I am never alone with a problem. It is a great community environment that General Assembly provides for their students. I am very happy with my descision and hopefully will have a new job come graduation in June.</p> 
-				
+				<p class="aboutMeText">I have now been in the program for five and a half weeks and find that I love it. I have always really enjoyed making things, of any sort really, and this really satisfies that desire. I am learning so much, every day, that it can be tiring at times, but it is still so interesting and very much worth it. I am very happy to have finally found my home, a career path where I can be in a field that I love, doing work that doesn't even feel like work.</p>
+				<p class="aboutMeText">I have been working nearly non-stop for the last few weeks and never get bored. I sometimes feel overwhelmed, but there are so many others in my class to help when I get stuck and they all feel just like I do. We have been provided innumerable resources so there is never a shortage of help, I am never alone with a problem. It is a great community environment that General Assembly provides for their students. I am very happy with my descision to take this step to help me break into a great industry.</p> 
 			</div>
 		</div>
 	</div>
