--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<div class="row">
 		<div class="col-12 nopadding">
 			<nav>
-			<a href="about.html" target="_blank">About Me</a>
-			<a href="blog.html" target="_blank">My Blog</a>
+			<a href="about.html">About Me</a>
+			<a href="blog.html">My Blog</a>
 			<a href="#mywork">My Work</a>
 			<a href="#myeducation">My Education</a>
-			<a href="contact.html" target="_blank">Contact Me</a>
+			<a href="contact.html">Contact Me</a>
 			</nav>
 		</div>
 	</div>
@@ -31,7 +31,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-8 nopadding">
-				<h1><strong>Rhiannon Kaulitzke</h1>
+				<h1><strong>Rhiannon Kaulitzke</strong></h1>
 			</div>
 		</div>
 	</div>
