added navbar to each window, edited about me

--- a/about.html
+++ b/about.html
@@ -15,6 +15,18 @@
 	</header>
 <body>
 <div class="container-fluid">
+	<div class="row">
+		<div class="col-12 nopadding">
+			<nav>
+			<a href="index.html">Home</a>	
+			<a href="about.html">About Me</a>
+			<a href="blog.html">My Blog</a>
+			<a href="contact.html">Contact Me</a>
+			</nav>
+		</div>
+	</div>
+</div>
+<div class="container-fluid">
 		<div class="row">
 			<div class="col-8 nopadding">
 				<h1><strong>Rhiannon Kaulitzke</h1>
@@ -28,7 +40,7 @@
 			<h3 id="aboutme">About Me</h3>
 				<p class="aboutMeText">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group.</p>
 				</br>
-				<p class="aboutMeText">I enjoy reading, hanging out with my nine year-old son, and playing with my dogs. I think unicorns are awesome and love things that sparkle.</p>
+				<p class="aboutMeText">I enjoy reading, cooking, and playing with my dogs. I think unicorns are awesome and love things that sparkle.</p>
 			</div>
 		</div>
 	</div>
