--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,18 @@
 	</header>
 <body>
 <div class="container-fluid">
+	<div class="row">
+		<div class="col-12 nopadding">
+			<nav>
+			<a href="index.html">Home</a>	
+			<a href="about.html">About Me</a>
+			<a href="blog.html">My Blog</a>
+			<a href="contact.html">Contact Me</a>
+			</nav>
+		</div>
+	</div>
+</div>
+<div class="container-fluid">
 		<div class="row">
 			<div class="col-8 nopadding">
 				<h1><strong>Rhiannon Kaulitzke</h1>
