slightly updated about me, will get better later

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 	<div class="row justify-content-between">
 		<div class="col-8 nopadding">
 			<h3 id="aboutme">About Me</h3>
-				<p class="aboutMeText">I am a creative problem solver that excels in learning concepts thoroughly in an effort to understand why things work the way they do. This helps me teach others by explaining those understandings, allowing me to perpetuate knowledge throughout the group.</p>
+				<p class="aboutMeText">I am a creative problem solver and web developer. I learn best through interactions with others and love the sense of accomplishment I feel when a project is complete. I am passionate about creating, just about anything, and helping others.</p>
 				</br>
 				<p class="aboutMeText">I enjoy reading, cooking, and playing with my dogs. I think unicorns are awesome and love things that sparkle.</p>
 			</div>
