added new blog post

--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,18 @@
 			</div>
 		</div>
 	</div>
+	<div class="container-fluid">
+	<div class="row justify-content-between">
+		<div class="col-8 nopadding">
+			<h3 id="aboutme">Work-Life Balance</h3>
+			<h6>May 6, 2018</h6>
+				<p class="aboutMeText">I hear the term "work-life balance" all over the place these days. According to some, millenials are ruining the work-life balance of the past by being too willing to work way past the typical 40 hour work week. As a student for the bulk of the last several years, I have certainly spent a lot more time working than enjoying life. Sometimes this is a neccessary sacrifice that we must make in order to be able to have the job security to take more "life" time later on. </p>
+				<p class="aboutMeText">As I sit here on a Sunday night, taking my first break from homework for the weekend to do something I want to do, I can't help but wonder what life will feel like when I get that sought-after work-life balance. I certainly look forward to having weekends to enjoy life, but I might just end up being bored as well.</p>
+				<p class="aboutMeText">The way that the economy is these days, we have to work hard to get what we want. I certainly don't place any blame for having to work as hard as I am to try to accomplish my goals. In fact, I feel that I will be that much more proud of myself once my goals are finally realized. Yeah, I have to put in a lot of hard work, but that is how we get places in life.</p>
+				<p class="aboutMeText">I certainly think millenials have it right, work hard, work towards something, and maybe you will manage to acheive it. I don't think this is anything to look down upon and feel that the older generation should be proud of millenials for being able to do what it takes to have control over their own lives, I know I am.</p> 
+			</div>
+		</div>
+	</div>
 <footer class="container-fluid nopadding">
 	<div class="row">
 		<div class="col-12 nopadding">
