fixed some mild stying issues

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 								<img src="images/collaborate.png" alt="">
 							</div>
 							<div class="desc">
-								<h4>Project Title</h4>
+								<h4>Collaborate</h4>
 								<h5><i class="fa fa-folder"></i> Website</h5>
 								<p>
 									A message board of sorts allowing for people to post their ideas for new apps or Startups and get input and suggestions from others in the same, or adjacent, fields of expertise.
@@ -749,7 +749,7 @@
 
 						<div class="contact-info-single">
 							<i class="lnr lnr-pushpin"></i>
-							<p>https://www.linkedin.com/in/rhiannonkaulitzke/</p>
+							<p>www.linkedin.com/in/rhiannonkaulitzke</p>
 						</div>
 					</div>
 				</div>
