--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 								<p>
 									A message board of sorts allowing for people to post their ideas for new apps or Startups and get input and suggestions from others in the same, or adjacent, fields of expertise.
 								</p>
-								<a href="#" class="btn-view-project">View Project</a>
+								<!-- <a href="#" class="btn-view-project">View Project</a> -->
 							</div>
 						</div>
 					</div>
@@ -454,7 +454,7 @@
 								<p>
 									A website with a blog component and a link to the online store of the admin/user that the site was created for. Quill was used to allow for content additions without touching the code.
 								</p>
-								<a href="#" class="btn-view-project">View Project</a>
+								<!-- <a href="#" class="btn-view-project">View Project</a> -->
 							</div>
 						</div>
 					</div>
