--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 	<!-- Blog Section Ends -->
 	
 	<!-- Google Map & Contact Section Starts -->
-	<section class="contact-two" id="contact">
+<!-- 	<section class="contact-two" id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -689,9 +689,14 @@
 				</div>
 			</div>
 			
-			<div class="row no-gutters contact-entry">
+			<div class="row no-gutters contact-entry"> -->
 				<!-- Contact Form Starts -->
-				<div class="col-md-8">
+					<div class="sidebar-contactnow-box">
+						<h2>Get In Touch</h2>
+						<p>I would love to hear from you.</p>
+						<a href="mailto:rhiannon.kaulitzke@gmail.com" class="btn-round">Contact Now</a>
+					</div>
+				<!-- <div class="col-md-8">
 					<div class="contact-form-two">
 						<p>Feel free to Contact Me</p>
 						
@@ -725,7 +730,7 @@
 							</div>
 						</form>
 					</div>
-				</div>
+				</div> -->
 				<!-- Contact Form Ends -->
 				
 				<!-- Contact detail starts -->
