--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<p>Teacher</p>
 						<p>Creative Problem Solver</p>
 					</div>
-					<h2>Hello, I am <span class="typed-title"></span></h2>
+					<h2>Hello, I am a<span class="typed-title"></span></h2>
 					
 					<div class="header-btn">
 						<a href="https://docs.google.com/document/d/1WlJrZsbFzQadAXxTp1mwrxKUw_bnFONlUzNANaaY73s/edit?usp=sharing" class="btn-custom">View My CV</a>
