--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<li class="active"><a href="#home">Home</a></li>
 						<li><a href="#about">About Me</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#resume">Resume</a></li>
+						<li><a href="#resume">Experience</a></li>
 						<li><a href="#blog">Blog</a></li>
 						<li><a href="#contact">Contact Me</a></li>
 					</ul>
