--- a/index.html
+++ b/index.html
@@ -679,17 +679,17 @@
 	<!-- Blog Section Ends -->
 	
 	<!-- Google Map & Contact Section Starts -->
-<!-- 	<section class="contact-two" id="contact">
+	<section class="contact-two" id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title-two">
-						<h2>Keep In <span>Touch</span></h2>
+
 					</div>
 				</div>
 			</div>
 			
-			<div class="row no-gutters contact-entry"> -->
+			<div class="row no-gutters contact-entry">
 				<!-- Contact Form Starts -->
 					<div class="sidebar-contactnow-box">
 						<h2>Get In Touch</h2>
@@ -756,6 +756,11 @@
 							<i class="lnr lnr-pushpin"></i>
 							<p>www.linkedin.com/in/rhiannonkaulitzke</p>
 						</div>
+
+						<div class="contact-info-single">
+							<i class="lnr lnr-bug"></i>
+							<p>https://github.com/RhiaK</p>
+						</div>
 					</div>
 				</div>
 				<!-- Contact detail ends -->
@@ -771,7 +776,7 @@
 				<div class="footer-social-two">
 				</div>
 				
-				<div class="copyright-text">
+				<div class="copyright-text justify-content-center">
 					<p>Copyright &copy; Rhiannon Kaulitzke 2018. all rights reserved.</p>
 				</div>
 			</div>
