--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 					<div class="sidebar-contactnow-box">
 						<h2>Get In Touch</h2>
 						<p>I would love to hear from you.</p>
-						<a href="mailto:rhiannon.kaulitzke@gmail.com" class="btn-round">Contact Now</a>
+						<a href="mailto:rhiannon.kaulitzke@gmail.com" class="btn-round">Contact Me</a>
 					</div>
 				<!-- <div class="col-md-8">
 					<div class="contact-form-two">
