--- a/blog3.html
+++ b/blog3.html
@@ -63,7 +63,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="index.html#about">About Me</a></li>
 						<li><a href="index.html#portfolio">Portfolio</a></li>
-						<li><a href="index.html#resume">Resume</a></li>
+						<li><a href="index.html#resume">Experience</a></li>
 						<li class="active"><a href="index.html#blog">Blog</a></li>
 						<li><a href="index.html#contact">Contact Me</a></li>
 					</ul>
