update some specifics

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		<!-- Complete Project Area starts -->
 	<section class="complete-project-area-two">
 		<div class="container">
-			<h3 class="during">During my Web Development career I have completed:</h3>
+			<h3 class="during">During my Web Development career, I have completed:</h3>
 			<div class="row">
 
 				<div class="col-md-3 col-sm-3">
