updated joy http

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 								<p>
 									A website with a blog component and a link to the online store of the admin/user that the site was created for. Quill was used to allow for content additions without touching the code.
 								</p>
-								<a href="https://joyft-misty.firebaseapp.com/home" class="btn-view-project">View Project</a>
+								<a href="https://joyft-misty.firebaseapp.com" class="btn-view-project">View Project</a>
 							</div>
 						</div>
 					</div>
