updated collaborate link

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 								<p>
 									A message board of sorts allowing for people to post their ideas for new apps or Startups and get input and suggestions from others in the same, or adjacent, fields of expertise.
 								</p>
-								<a href="https://rhiak.github.io/collaborate/" class="btn-view-project">View Project</a>
+								<a href="https://collaborate3-1234.firebaseapp.com/" class="btn-view-project">View Project</a>
 							</div>
 						</div>
 					</div>
