--- a/index.html
+++ b/index.html
@@ -280,11 +280,11 @@
 				<div class="col-md-3 col-sm-4 col-xs-12 portfolio-box apps">
 					<div class="single-portfolio-two">
 						<a href="#popup-2" class="has-popup">
-							<img src="images/sprout1.png" class="Portfolio Image" alt="" />
+							<img src="images/portfolio.jpg" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay-two">
 								<div class="single-portfolio-info">
-									<h2>Sprout</h2>
-									<h3>App</h3>
+									<h2>Portfolio Project</h2>
+									<h3>Website</h3>
 								</div>
 							</div>
 						</a>
@@ -292,15 +292,15 @@
 					<div id="popup-2" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<div class="image">
-								<img src="images/sprout1.png" alt="">
+								<img src="images/portfolio.jpg" alt="">
 							</div>
 							<div class="desc">
-								<h4>Sprout</h4>
+								<h4>Portfolio Project</h4>
 								<h5><i class="fa fa-folder"></i> App</h5>
 								<p>
-									This app helps keep parents in the loop about their child’s whereabouts; it allows the person dropping the child at a new location to easily send a text message to a predefined phone number.
+									This is a portfolio for another General Assembly graduate. It showcases his work from the data science program he completed.
 								</p>
-								<a href="https://sprout1.herokuapp.com" class="btn-view-project">View Project</a>
+								<a href="https://rhiak.github.io/AlexPortfolio/" class="btn-view-project">View Project</a>
 							</div>
 						</div>
 					</div>
